De-gender and clarify some text in my codebase

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
-wisdom.wisdomContent=Wisdom Content
-wisdom.attribution=Attribution
+wisdom.wisdomContent=Wisdom
+wisdom.attribution=Wise Person
 wisdom.addedBy=Added By User
 wisdom.addedDate=Date Added
 title.leaderboard=Wisdoms By Vote, All-time
