Create WisdomWithVotes presentation object plus controller and factory logic for object.  Tweak wisdom leaderboard HTML template, which still isn't perfect - I've broken some sort of html rule against tables and divs together.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,8 @@ wisdom.wisdomContent=Wisdom
 wisdom.attribution=Wise Person
 wisdom.addedBy=Added By User
 wisdom.addedDate=Date Added
+
+vote.addedByUsername=Voted Up By User
+vote.timeAdded=Date Voted Up
+
 title.leaderboard=Wisdoms By Vote, All-time
