--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,7 @@ vote.addedByUsername=Voted Up By User
 vote.timeAdded=Date Voted Up
 
 title.leaderboard=Wisdoms By Vote, All-time
+title.userDashboard='s Dashboard
+title.userDashboardTitle=User Dashboard
+title.userDashboard.votedFor=Wisdoms Voted For
+title.userDashboard.submitted=Wisdoms Submitted
