Parametrize the addwisdom placeholder text using properties in messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,7 @@ title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
 title.userDashboard.votedFor=Wisdoms Voted For
 title.userDashboard.submitted=Wisdoms Submitted
+
+placeholder.wisdomContent="e.g. 'Measure twice, cut once.'"
+placeholder.wisdomAttribution="e.g. 'My old man'"
+placeholder.optionalUsername="e.g. 'rkennel'; leave blank for anon"
