Give AddVote a page, piece of helper text, and @GetMapping on the AddVoteController.  Try and fail to cleanly add a vote button to the leaderboard.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,4 @@ title.userDashboard.submitted=Wisdoms Submitted
 placeholder.wisdomContent="e.g. 'Measure twice, cut once.'"
 placeholder.wisdomAttribution="e.g. 'My old man'"
 placeholder.optionalUsername="e.g. 'rkennel'; leave blank for anon"
+placeholder.username="e.g. 'lmccoy67'"
