Add passwords to user objects, finish wiring user-registration controllers, create registration page, limit H2 console to admin roles

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,5 @@ placeholder.wisdomContent=e.g. 'Measure twice, cut once.'
 placeholder.wisdomAttribution=e.g. 'My old man'
 placeholder.optionalUsername=e.g. 'rkennel'; leave blank for anon
 placeholder.username=e.g. 'lmccoy67'
+placeholder.password=e.g. '$upaH$3cRet'
+placeholder.displayName=e.g. 'Bones'
