Update footer to include link to Github issues page [https://trello.com/c/dGSjfsYv]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,7 +11,8 @@ title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
 title.userDashboard.votedFor=Wisdoms Voted For
 title.userDashboard.submitted=Wisdoms Submitted
-s
+upwiseRepoUrl=https://www.github.com/sapphon/upwise
+upwiseIssuesUrl=https://www.github.com/sapphon/upwise/issues
 placeholder.wisdomContent=e.g. 'Measure twice, cut once.'
 placeholder.wisdomAttribution=e.g. 'My old man'
 placeholder.optionalUsername=e.g. 'rkennel'; leave blank for anon
