/allanalytics now populates a basic table of analytics events.  It is accessible by users with the admin role only.  First-pass analytics system ready for use. [https://trello.com/c/G7k0ww7c]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ vote.addedByUsername=Voted Up By User
 vote.timeAdded=Date Voted Up
 
 title.leaderboard=Wisdoms By Vote, All-time
+title.analytics=Upwise User Analytics
 title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
 title.userDashboard.votedFor=Wisdoms Voted For
