--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,11 +12,20 @@ title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
 title.userDashboard.votedFor=Wisdoms Voted For
 title.userDashboard.submitted=Wisdoms Submitted
-upwiseRepoUrl=https://www.github.com/sapphon/upwise
-upwiseIssuesUrl=https://www.github.com/sapphon/upwise/issues
+
+url.sourceControlUrl=https://www.github.com/sapphon/upwise
+url.issuesUrl=https://www.github.com/sapphon/upwise/issues
+
 placeholder.wisdomContent=e.g. 'Measure twice, cut once.'
 placeholder.wisdomAttribution=e.g. 'My old man'
 placeholder.optionalUsername=e.g. 'rkennel'; leave blank for anon
 placeholder.username=e.g. 'lmccoy67'
 placeholder.password=e.g. '$upaH$3cRet'
 placeholder.displayName=e.g. 'Bones'
+
+text.sourceControlUrlPresentation=github.com/sapphon/upwise
+text.issuesUrlPresentation=here
+text.sourceControlUrlPreamble=Source is open at 
+text.issuesUrlPreamble=Issues? Report them 
+
+text.copyright=©2019 sapphon.  Rights integral to the functioning of the GPLv3 reserved.  All other permissions given.
