Parameterize event response messages in eventresponse fragment; also end error messages in '!' and success notifications with '.' [https://trello.com/c/dXnU66cf]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,4 +28,22 @@ text.issuesUrlPresentation=here
 text.sourceControlUrlPreamble=Source is open at 
 text.issuesUrlPreamble=Issues? Report them 
 
+text.eventResponse.wisdomConflict=That wisdom already exists and was not added.
+
 text.copyright=©2019 sapphon.  Rights integral to the functioning of the GPLv3 reserved.  All other permissions given.
+
+text.eventResponse.login.invalid=That account information isn't valid!
+
+text.eventResponse.logout.success=You are now logged out.
+
+text.eventResponse.registrationAdd.success=Registration complete.  You are also logged in.
+text.eventResponse.registrationAdd.invalid=That account information isn't valid!
+text.eventResponse.registrationAdd.conflict=That login already exists!
+
+text.eventResponse.wisdomAdd.success=Your wisdom was recorded.
+text.eventResponse.wisdomAdd.invalid=That's not a valid wisdom!
+text.eventResponse.wisdomAdd.conflict=That wisdom already exists!
+
+text.eventResponse.voteAdd.success=Your vote was counted.
+text.eventResponse.voteAdd.invalid=That's not a valid vote!
+text.eventResponse.voteAdd.conflict=That vote exists already and was not counted!
