--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ vote.addedByUsername=Voted Up By User
 vote.timeAdded=Date Voted Up
 
 title.leaderboard=Wisdoms By Vote, All-time
+title.recent=Recent Wisdom
 title.analytics=Upwise User Analytics
 title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
