User dashboard now links to random wisdom upvoted by that user. [https://trello.com/c/NyeSLbpv]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ title.analytics=Upwise User Analytics
 title.userDashboard='s Dashboard
 title.userDashboardTitle=User Dashboard
 title.userDashboard.votedFor=Wisdoms Voted For
+title.userDashboard.randomAmongVotedFor=Random Among These
 title.userDashboard.submitted=Wisdoms Submitted
 
 url.sourceControlUrl=https://www.github.com/sapphon/upwise
