User registration now takes an email address and /forgotpassword serves a one-input form that does nothing as yet  [https://trello.com/c/85KznxWb]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ placeholder.optionalUsername=e.g. 'rkennel'; leave blank for anon
 placeholder.username=e.g. 'lmccoy67'
 placeholder.password=e.g. '$upaH$3cRet'
 placeholder.displayName=e.g. 'Bones'
+placeholder.email=e.g. 'user@domain.com'
 
 text.sourceControlUrlPresentation=github.com/sapphon/upwise
 text.issuesUrlPresentation=here
