UserController now serves /choosenewpassword{token} endpoint and corresponding form exists; no actual reset emails are sent yet [https://trello.com/c/aQxrdvKB]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,3 +50,6 @@ text.eventResponse.wisdomAdd.conflict=That wisdom already exists!
 text.eventResponse.voteAdd.success=Your vote was counted.
 text.eventResponse.voteAdd.invalid=That's not a valid vote!
 text.eventResponse.voteAdd.conflict=That vote exists already and was not counted!
+
+text.eventResponse.passwordChange.success=Your password has been changed!
+text.eventResponse.passwordChange.invalid=An error occurred; please try again.
