Blue Steel colors

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,7 +33,7 @@ text.issuesUrlPreamble=Issues? Report them
 
 text.eventResponse.wisdomConflict=That wisdom already exists and was not added.
 
-text.copyright=©2019 Connor Shaughnessy.  Rights integral to the functioning of the GPLv3 reserved.  All other rights granted.
+text.copyright=©2019 Connor Shaughnessy.  Rights integral to the functioning of the GPLv3 reserved.  All other rights granted.  Colors by Kyle Donnellon.
 
 text.eventResponse.login.invalid=That account information isn't valid!
 
